src/main/java/com/example/coupon/domain/errors/MaxRetryCouponUseException.java
package com.example.coupon.domain.errors;

public class MaxRetryCouponUseException extends RuntimeException{
}
